--- a/index.html
+++ b/index.html
@@ -96,6 +96,31 @@
   </div>
 
 <script>
+
+ 
+  const checkBoxes = document.querySelectorAll(`.inbox input[type="checkbox"]`)
+  let lastChecked;
+
+   function handleCheck(e) {
+    let inBetween = false;
+    // Check if shift key is pressed down
+    // and check if they checked it
+    if (e.shiftKey && this.checked) {
+      // loop over every single checkbox
+      checkBoxes.forEach(checkBox => {
+        if(checkBox === this || checkBox === lastChecked) {
+          inBetween = !inBetween;
+        };
+        if(inBetween) {
+          checkBox.checked = true;
+        };
+      });
+    }
+
+    lastChecked = this;
+  };
+
+  checkBoxes.forEach(checkBox => checkBox.addEventListener("click", handleCheck))
 </script>
 </body>
 </html>
